<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="decrementSymbol">-</string>
    <string name="incrementSymbol">+</string>
    <string name="orderSummaryLabel">Order Summary</string>
    <string name="orderButtonText">Order</string>
</resources>
