<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        tools:context="com.example.android.justjava_2.MainActivity">

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName" />

        <TextView
            style="@style/headerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/toppings"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whippedCreamCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24sp"
            android:text="@string/whippedCream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24sp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            style="@style/headerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <Button
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="wrap_content"
                android:onClick="decrement"
                android:paddingTop="16dp"
                android:text="@string/decrementSymbol" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="wrap_content"
                android:onClick="increment"
                android:paddingTop="16dp"
                android:text="@string/incrementSymbol" />

        </LinearLayout>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/orderSummaryLabel"
            android:textAllCaps="true"
            style="@style/headerTextStyle" />

        <TextView
            android:id="@+id/orderSummary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:paddingTop="16dp"
            android:text="@string/orderButtonText" />
    </LinearLayout>

</ScrollView>